--- a/core/unit_test/CMakeLists.txt
+++ b/core/unit_test/CMakeLists.txt
@@ -3,6 +3,8 @@
       ${CMAKE_CURRENT_LIST_DIR}/UnitTestMainInit.cpp
       ${CMAKE_CURRENT_LIST_DIR}/cilkplus/TestCilkPlus_Init.cpp
       ${CMAKE_CURRENT_LIST_DIR}/cilkplus/TestCilkPlus_SharedAlloc.cpp
+     ## ${CMAKE_CURRENT_LIST_DIR}/cilkplus/TestCilkPlus_RangePolicy.cpp
+     ## ${CMAKE_CURRENT_LIST_DIR}/cilkplus/TestCilkPlus_Reductions.cpp
      )
 
   KOKKOS_ADD_EXECUTABLE_AND_TEST(
