Update for Emu arch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ if (KOKKOS_ARCH_EMU_X86)
    KOKKOS_ENABLE_OPTION(EMU ON BOOLEAN "Enable Emu")
    KOKKOS_OPTION(EMU_X86 ON BOOLEAN "Enable Emu on x86")
 endif()
-if (KOKKOS_ARCH_EMU_X86)
+if (KOKKOS_ARCH_EMU)
    KOKKOS_ENABLE_OPTION(EMU ON BOOLEAN "Enable Emu")
 endif()
 
